<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Toolbar -->
    <string name="toolbar_menu_settings">설정</string>
    <string name="toolbar_title_settings">설정</string>
    <string name="toolbar_title_management_user">사용자 관리</string>
    <string name="toolbar_title_management_device">사운드처리기 관리</string>
    <string name="toolbar_title_add_user">사용자 등록</string>
    <string name="toolbar_title_edit_user">사용자 수정</string>
    <string name="toolbar_title_add_device">사운드처리기 등록</string>
    <string name="toolbar_title_edit_device">사운드처리기 수정</string>
    <string name="toolbar_title_manual">사용설명서</string>

    <!-- Lock screen -->
    <string name="lock_screen_title">암호 입력</string>
    <string name="lock_screen_decode_password">리모컨 앱 암호를 입력해주세요.</string>
    <string name="lock_screen_register_password">리모컨 앱 암호를 등록해주세요.</string>
    <string name="lock_screen_compare_password">확인을 위해 암호를 다시 입력해주세요.</string>
    <string name="lock_screen_forgot_password"><u>여기를 누르면 암호를 재설정합니다.</u></string>
    <string name="lock_screen_invalid_state">Invalid state.</string>
    <string name="lock_screen_number_1">1</string>
    <string name="lock_screen_number_2">2</string>
    <string name="lock_screen_number_3">3</string>
    <string name="lock_screen_number_4">4</string>
    <string name="lock_screen_number_5">5</string>
    <string name="lock_screen_number_6">6</string>
    <string name="lock_screen_number_7">7</string>
    <string name="lock_screen_number_8">8</string>
    <string name="lock_screen_number_9">9</string>
    <string name="lock_screen_number_0">0</string>
    <string name="lock_screen_dialog_title">주의</string>
    <string name="lock_screen_dialog_message">암호 재설정 시 보안을 위해 등록된 모든 사용자 및 사운드처리기 정보가 삭제됩니다. 암호를 재설정하시겠습니까?</string>
    <string name="lock_screen_dialog_positive">재설정</string>
    <string name="lock_screen_dialog_negative">취소</string>

    <!-- Settings -->
    <string name="settings_subject_security">보안</string>
    <string name="settings_subject_features">기능</string>
    <string name="settings_subject_management">등록관리</string>
    <string name="settings_subject_support">고객지원</string>
    <string name="settings_switch_lock_screen">화면잠금</string>
    <string name="settings_switch_auto_connection">자동연결</string>
    <string name="settings_button_user">사용자</string>
    <string name="settings_button_device">사운드처리기</string>
    <string name="settings_button_manual">사용설명서</string>

    <!-- Manual Screen -->
    <string name="manual_screen_checkbox">다시보지 않기</string>
    <string name="manual_screen_button">닫기</string>

    <string name="activity_main_dialog_message_auto_connection_button_currently_connected">현재 연결된 사운드처리기가 있습니다. 연결을 종료한 뒤 자동 연결 기능을 해제하시겠습까?</string>
    <string name="activity_main_dialog_message_auto_connection_button_currently_disconnected">자동 연결 기능을 해제하시겠습니까?</string>
    <string name="activity_main_dialog_message_exit_app">앱을 종료하시겠습니까?</string>
    <string name="activity_main_dialog_message_search_button_currently_connected">현재 연결중인 사운드처리기가 있습니다. 연결을 해제한 뒤 새로운 사운드 처리기를 검색하고 등록하시겠습니까?</string>
    <string name="activity_main_dialog_message_search_button_currently_disconnected">새로운 사운드처리기를 검색하고 등록하시겠습니까?</string>
    <string name="activity_main_layout_message_no_device_on_app">앱에 등록된 사운드처리기가 없습니다. 먼저 사운드처리기를 등록하시기 바랍니다.</string>
    <string name="activity_main_layout_message_please_wait">잠시만 기다려주세요.</string>
    <string name="activity_main_dialog_message_please_enable_auto_connection">검색하기 전에 자동 연결 기능을 활성화 해주세요.</string>
    <string name="activity_main_layout_message_searching_sound_processor">사운드처리기 검색</string>
    <string name="app_name">토닥 리모컨</string>
    <string name="dialog_message_cancel">취소</string>
    <string name="dialog_message_no">아니오</string>
    <string name="dialog_message_ok">확인</string>
    <string name="dialog_message_yes">예</string>
    <string name="fragment_device_list_dialog_message_delete_when_connected_1">사운드처리기 \"</string>
    <string name="fragment_device_list_dialog_message_delete_when_connected_2">\"은 현재 연결되어 있습니다. 연결을 해제하고 사운드처리기를 목록에서 제거하시겠습니까?</string>
    <string name="fragment_device_list_dialog_message_delete_when_not_connected_1">사운드처리기 \"</string>
    <string name="fragment_device_list_dialog_message_delete_when_not_connected_2">\"을 등록된 사운드처리기 목록에서 제거하시겠습니까?</string>
    <string name="fragment_device_list_item_map_date">맵 일자</string>
    <string name="fragment_device_list_item_model">모델</string>
    <string name="fragment_device_list_item_name">이름</string>
    <string name="fragment_device_list_item_serial">일련번호</string>
    <string name="fragment_device_list_item_user">사용자</string>
    <string name="fragment_device_list_layout_title_registered_devices">등록된 기기</string>
    <string name="fragment_home_layout_message_searching_to_connect">사운드처리기가 연결되지 않았습니다. 연결을 위해 현재 등록된 사운드처리기 목록을 기반으로 검색중입니다.</string>
    <string name="fragment_home_layout_title_led">LED</string>
    <string name="fragment_home_layout_title_low_power">모드</string>
    <string name="fragment_home_layout_title_program">프로그램</string>
    <string name="fragment_home_layout_title_sensitivity">감도</string>
    <string name="fragment_home_layout_title_stimulation">알람</string>
    <string name="fragment_home_layout_title_telecoil">텔레코일</string>
    <string name="fragment_home_layout_title_volume">볼륨</string>
    <string name="fragment_password_dialog_message_different_map_date">현재 등록된 사운드처리기들의 맵 일자와 다릅니다. 그래도 이 사운드처리기를 등록하시겠습니까?</string>
    <string name="fragment_password_dialog_message_new_user">현재 등록된 사운드처리기들의 사용자와 다른 새로운 사용자의 사운드처리기입니다. 현재 등록된 모든 사운드처리기를 삭제하고 이 사운드처리기를 등록하시겠습니까?</string>
    <string name="fragment_password_dialog_message_stop_registration_and_go_search_screen">사운드처리기 등록을 중단하고 검색 화면으로 돌아가시겠습니까?</string>
    <string name="fragment_password_layout_message_enter_password">사운드처리기의 보안코드를 입력해주세요.</string>
    <string name="fragment_password_layout_message_not_matched_password">보안 비밀번호가 일치하지 않습니다.</string>
    <string name="fragment_password_layout_message_number_of_password">보안 비밀번호는 4자리의 번호입니다.</string>
    <string name="fragment_password_layout_message_read_information">사운드처리기로부터 필요한 정보를 수신중입니다.</string>
    <string name="fragment_password_layout_message_secured_password">****</string>
    <string name="fragment_password_toast_message_ble_busy">이전 명령을 처리중입니다.</string>
    <string name="fragment_search_dialog_message_communication_error">연결하는 과정에서 통신에러가 발생했습니다. 다시 연결을 시도해주세요.</string>
    <string name="fragment_search_dialog_message_search_stop_and_go_home">사운드처리기 검색을 중단하고 홈 화면으로 돌아가시겠습니까?</string>
    <string name="fragment_search_dialog_message_try_to_connect_1">검색을 중단하고 선택하신 사운드처리기 \"</string>
    <string name="fragment_search_dialog_message_try_to_connect_2">\"(으)로 등록 과정을 진행하시겠습니까?</string>
    <string name="fragment_search_layout_title_connectable_devices">연결 가능한 기기</string>
    <string name="fragment_search_layout_title_registered_devices">등록된 기기</string>
    <string name="fragment_search_toast_message_critical_error">알 수 없는 에러가 발생했습니다. 부착된 사운드처리기를 탈착 후 다시 부착해주세요. 그리고 앱을 완전히 종료 후 다시 실행해주세요.</string>
    <string name="language">한글</string>
    <string name="service_termination_notification_company">토닥</string>
    <string name="service_termination_notification_title">리모컨</string>
    <string name="toolbar_title_auto_connection">자동 연결</string>
    <string name="toolbar_title_customer_support">고객지원</string>
    <string name="toolbar_title_home">홈</string>
    <string name="toolbar_title_lists">목록</string>

    <string name="toolbar_title_password">보안코드</string>
    <string name="toolbar_title_search">검색</string>
    <string name="warning_message_image_content_description">이미지 없음</string>
    <string name="fragment_password_dialog_message_communication_error">등록하는 과정에서 통신에러가 발생했습니다. 다시 연결을 시도해주세요.</string>
    <string name="activity_main_toast_message_ble_not_connected">현재 연결된 사운드처리기가 없습니다.</string>
    <string name="activity_main_toast_message_packet_timeout">사운드처리기로부터 아무런 응답을 받지 못했습니다. 다시 시도해보세요.</string>
    <string name="activity_main_toast_message_packet_length_error">예상하지 못한 크기의 응답 패킷이 수신되었습니다. 앱을 완전히 종료 후 다시 시도해주세요.</string>
    <string name="activity_main_toast_message_password_why_different">사운드처리기의 보안 비밀번호가 일치하지 않습니다. 목록에서 제거한 뒤 다시 등록해주세요.</string>
    <string name="activity_main_toast_message_can_not_find_sound_processor">예상하지 못한 연결을 시도했습니다. 사운드처리기 목록을 모두 삭제하고 다시 등록해주세요.</string>
    <string name="activity_main_toast_message_differnt_sound_processor_information">연결된 사운드처리기의 정보가 등록되어 있는 정보와 다릅니다. 사운드처리기 목록에서 이 장치를 제거하고 다시 등록해주세요.</string>
    <string name="activity_main_toast_message_sound_processor_get_error_packet">사운드처리기가 유효하지 않은 명령어를 전송했습니다.</string>
    <string name="activity_main_toast_message_sound_processor_busy">현재 사운드처리기가 이전 명령을 수행중입니다.</string>
    <string name="activity_main_toast_message_sound_processor_locked">사운드처리기의 암호가 풀리지 않았습니다. 보안 비밀번호를 사용해 잠금을 해제해주세요.</string>
    <string name="activity_main_toast_message_sound_processor_internal_error">사운드처리기 내부에서 에러가 발생했습니다. 탈착 후 다시 부착해주세요.</string>
    <string name="activity_main_dialog_message_relaunch_app_by_status_parameters">사운드처리기의 상태 정보에 문제가 있습니다. 앱을 다시 실행한 후 설정을 시도해주세요.</string>
    <string name="activity_main_dialog_message_invalid_status_value">사운드처리기의 상태 정보에 문제가 있습니다. 사운드처리기를 탈착 후 다시 부착해주세요.</string>
    <string name="activity_main_layout_message_user_guide_dont_show_again">다시보지 않기</string>
    <string name="activity_main_layout_message_user_guide_close">닫기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>