<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="todoc.cochlear.remoteapp.fragment.PasswordFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimen_line_width_height_size"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 최상단 레이아웃 구분선 -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_line_width_height_size"
            android:contentDescription="@string/warning_message_image_content_description"
            android:src="@color/color_line_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/fragment_password_layout_message_enter_password"
            android:textColor="@color/color_medium_description_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fragment_password_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/fragment_password_layout_message_secured_password"
            android:hint="@string/fragment_password_layout_message_secured_password"
            android:inputType="numberPassword"
            android:letterSpacing="1.4"
            android:maxLength="4"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_edit_text_text_size_sp"
            tools:hint="@string/fragment_password_layout_message_secured_password" />

        <Button
            android:id="@+id/fragment_password_ok_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:text="@string/dialog_message_ok" />

        <TextView
            android:id="@+id/fragment_password_warning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_password_layout_message_number_of_password"
            android:textColor="@color/color_medium_warning_text_color"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fragment_password_wrong_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_password_layout_message_not_matched_password"
            android:textColor="@color/color_medium_error_text_color"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_line_width_height_size"
        android:contentDescription="@string/warning_message_image_content_description"
        android:src="@color/color_line_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>