<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/warning_message_image_content_description"
        android:scaleType="fitCenter"
        android:src="@drawable/drawable_model_td2" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/service_termination_notification_title"
            android:textColor="#444444"
            android:textSize="@dimen/dimen_notification_title_text_size_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="start"
            android:text="@string/service_termination_notification_company"
            android:textColor="#888888"
            android:textSize="@dimen/dimen_notification_company_text_size_sp" />
    </LinearLayout>

</LinearLayout>