<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/device_list_model_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/warning_message_image_content_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/drawable_model_td2" />

    <ImageButton
        android:id="@+id/device_list_remove"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/ripple_device_list_delete_button"
        android:contentDescription="@string/warning_message_image_content_description"
        android:elevation="4dp"
        android:focusable="false"
        android:padding="6dp"
        android:src="@drawable/ic_device_list_remove"
        android:tint="#FF4081"
        app:layout_constraintBottom_toBottomOf="@id/device_list_model_image"
        app:layout_constraintStart_toStartOf="@id/device_list_model_image" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/device_list_model_image"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fragment_device_list_item_name"
                android:textColor="@color/color_small_title_text_color"
                android:textSize="@dimen/dimen_small_title_text_size_sp" />

            <TextView
                android:id="@+id/device_list_device_name"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:paddingTop="@dimen/dimen_device_list_value_text_padding_size"
                android:paddingBottom="@dimen/dimen_device_list_value_text_padding_size"
                android:textColor="@color/color_device_list_value_text_color"
                android:textSize="@dimen/dimen_device_list_value_text_size_sp"
                tools:text="12345678" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fragment_device_list_item_user"
                android:textColor="@color/color_small_title_text_color"
                android:textSize="@dimen/dimen_small_title_text_size_sp" />

            <TextView
                android:id="@+id/device_list_user_name"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:paddingTop="@dimen/dimen_device_list_value_text_padding_size"
                android:paddingBottom="@dimen/dimen_device_list_value_text_padding_size"
                android:textColor="@color/color_device_list_value_text_color"
                android:textSize="@dimen/dimen_device_list_value_text_size_sp"
                tools:text="김은수" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fragment_device_list_item_map_date"
                android:textColor="@color/color_small_title_text_color"
                android:textSize="@dimen/dimen_small_title_text_size_sp" />

            <TextView
                android:id="@+id/device_list_map_date"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:paddingTop="@dimen/dimen_device_list_value_text_padding_size"
                android:paddingBottom="@dimen/dimen_device_list_value_text_padding_size"
                android:textColor="@color/color_device_list_value_text_color"
                android:textSize="@dimen/dimen_device_list_value_text_size_sp"
                tools:text="2020.2.3 14:41" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fragment_device_list_item_model"
                android:textColor="@color/color_small_title_text_color"
                android:textSize="@dimen/dimen_small_title_text_size_sp" />

            <TextView
                android:id="@+id/device_list_model"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:paddingTop="@dimen/dimen_device_list_value_text_padding_size"
                android:paddingBottom="@dimen/dimen_device_list_value_text_padding_size"
                android:textColor="@color/color_device_list_value_text_color"
                android:textSize="@dimen/dimen_device_list_value_text_size_sp"
                tools:text="01" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fragment_device_list_item_serial"
                android:textColor="@color/color_small_title_text_color"
                android:textSize="@dimen/dimen_small_title_text_size_sp" />

            <TextView
                android:id="@+id/device_list_serial"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:paddingTop="@dimen/dimen_device_list_value_text_padding_size"
                android:paddingBottom="@dimen/dimen_device_list_value_text_padding_size"
                android:textColor="@color/color_device_list_value_text_color"
                android:textSize="@dimen/dimen_device_list_value_text_size_sp"
                tools:text="0102030405060708" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>